kubernetes/nginx-istio-canary/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-istio-canary
  namespace: test-canary
spec:
  host: nginx-istio-canary.default.svc.cluster.local
  subsets:
  - name: primary
    labels:
      pipecd.dev/variant: primary
  - name: canary
    labels:
      pipecd.dev/variant: canary
  - name: baseline
    labels:
      pipecd.dev/variant: baseline
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
